<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_btn"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search_text"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings_btn"
        android:title="@string/action_setting_text" />
    <item
        android:id="@+id/action_logout_btn"
        android:title="@string/action_logout_text" />
    <item
        android:id="@+id/action_location_btn"
        android:title="@string/action_location_text" />
    <item
        android:id="@+id/action_dashboard_btn"
        android:icon="@mipmap/ic_action_dashboard"
        android:title="@string/action_dashboard_text" />

</menu>